Fix nav icon colors on dark mode

--- a/searx/static/themes/etheme/less/etheme/etheme-dark.less
+++ b/searx/static/themes/etheme/less/etheme/etheme-dark.less
@@ -57,7 +57,7 @@
     }
 
     #nav_toggle_btn {
-        fill: var();
+        fill: var(--color-main-text);
     }
 
 }
